force-app/main/default/objects/Project__c/fields/ActualEnd__c.field-meta.xml
<CustomField>
    <fullName>ActualEnd__c</fullName>
    <label>Actual End</label>
    <type>Date</type>
</CustomField>