force-app/main/default/objects/Project__c/fields/Enable_Daily_Delay_Task_Alert__c.field-meta.xml
<CustomField>
    <fullName>Enable_Daily_Delay_Task_Alert__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>(주말 제외)매일 지연 과제 이메일 알림 발송 여부</inlineHelpText>
    <label>Enable Daily Delay Task Alert</label>
    <type>Checkbox</type>
</CustomField>