force-app/main/default/objects/Project__c/fields/Enable_Weekly_Task_Alert__c.field-meta.xml
<CustomField>
    <fullName>Enable_Weekly_Task_Alert__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>(매주 월요일)주간 착수/완료 예정 과제 알림 이메일 발송 여부</inlineHelpText>
    <label>Enable Weekly Task Alert</label>
    <type>Checkbox</type>
</CustomField>