force-app/main/default/objects/Project__c/fields/fm_DurationRemain__c.field-meta.xml
<CustomField>
    <fullName>fm_DurationRemain__c</fullName>
    <formula>IF ( TODAY() &lt;= PlanEnd__c, Text ( PlanEnd__c - TODAY() ), &quot;Overdue&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration(Remain)</label>
    <type>Text</type>
</CustomField>