force-app/main/default/objects/Project__c/fields/fm_ImplementationProgress2__c.field-meta.xml
<CustomField>
    <fullName>fm_ImplementationProgress2__c</fullName>
    <formula>IF ( ru_EndTaskActual__c = 0, ru_InProgressTask__c ,  ( ru_EndTaskActual__c + ru_InProgressTask__c ) / ( ru_TotalTask__c -  ru_CanceledTask__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Progress(진행포함)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>