force-app/main/default/objects/Project__c/fields/fm_ImplementationProgress__c.field-meta.xml
<CustomField>
    <fullName>fm_ImplementationProgress__c</fullName>
    <formula>IF ( ru_EndTaskActual__c = 0, 0, ru_EndTaskActual__c / (  ru_TotalTask__c -  ru_CanceledTask__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>