force-app/main/default/objects/Project__c/fields/fm_isManageableUser__c.field-meta.xml
<CustomField>
    <fullName>fm_isManageableUser__c</fullName>
    <formula>CONTAINS( Project_Manageable_Id__c, $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Manageable User</label>
    <type>Checkbox</type>
</CustomField>