force-app/main/default/objects/Project__c/fields/fm_isPrimaryPMUser__c.field-meta.xml
<CustomField>
    <fullName>fm_isPrimaryPMUser__c</fullName>
    <formula>ProjectManager__r.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Primary PM User</label>
    <type>Checkbox</type>
</CustomField>