force-app/main/default/objects/Project__c/fields/fm_isRecordOwner__c.field-meta.xml
<CustomField>
    <fullName>fm_isRecordOwner__c</fullName>
    <formula>OwnerId =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Record Owner</label>
    <type>Checkbox</type>
</CustomField>