force-app/main/default/objects/Project__c/fields/fm_isWeeklyReportScheduled__c.field-meta.xml
<CustomField>
    <fullName>fm_isWeeklyReportScheduled__c</fullName>
    <formula>IF (ISBLANK(TEXT(Weekly_Report_create_every__c)), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Weekly Report Scheduled</label>
    <type>Checkbox</type>
</CustomField>