force-app/main/default/objects/Project__c/fields/fm_Progress__c.field-meta.xml
<CustomField>
    <fullName>fm_Progress__c</fullName>
    <description>(실적) 완료Task / (지연 포함) 전체 Task</description>
    <formula>ru_EndTaskActual__c /  ru_TotalTask__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End Task(Actual) / Total Task</inlineHelpText>
    <label>(X)Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>