force-app/main/default/objects/Project__c/fields/fm_StartTaskPlanvsActual__c.field-meta.xml
<CustomField>
    <fullName>fm_StartTaskPlanvsActual__c</fullName>
    <formula>Text ( ru_StartTaskPlan__c ) &amp; &apos; / &apos; &amp; Text ( ru_StartTaskActual__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Task(Plan vs. Actual)</label>
    <type>Text</type>
</CustomField>