force-app/main/default/objects/Project__c/fields/Project_Manageable_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Manageable_Id__c</fullName>
    <label>Project Manageable Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>