force-app/main/default/objects/Project__c/fields/Project_Public_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Public_Group_Id__c</fullName>
    <label>Project Public Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>