force-app/main/default/objects/Project__c/fields/ru_CanceledTask__c.field-meta.xml
<CustomField>
    <fullName>ru_CanceledTask__c</fullName>
    <label>Canceled Task</label>
    <summarizedField>Milestone__c.ru_CanceledTask__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>