force-app/main/default/objects/Project__c/fields/ru_DelayedTask__c.field-meta.xml
<CustomField>
    <fullName>ru_DelayedTask__c</fullName>
    <label>Delayed Task</label>
    <summarizedField>Milestone__c.ru_DelayedTask__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>