force-app/main/default/objects/Project__c/fields/ru_EndTaskActual__c.field-meta.xml
<CustomField>
    <fullName>ru_EndTaskActual__c</fullName>
    <description>하위 Milestone - End Task(Actual) 의 Sum</description>
    <label>End Task(Actual)</label>
    <summarizedField>Milestone__c.ru_EndTaskActual__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>