force-app/main/default/objects/Project__c/fields/ru_EndTaskPlan__c.field-meta.xml
<CustomField>
    <fullName>ru_EndTaskPlan__c</fullName>
    <description>하위 Milestone - End Task(Plan) 의 Sum</description>
    <label>End Task(Plan)</label>
    <summarizedField>Milestone__c.ru_EndTaskPlan__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>