force-app/main/default/objects/Project__c/fields/ru_InProgressTask__c.field-meta.xml
<CustomField>
    <fullName>ru_InProgressTask__c</fullName>
    <label>In Progress Task</label>
    <summarizedField>Milestone__c.ru_InProgressTask__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>