force-app/main/default/objects/Project__c/fields/ru_StartTaskActual__c.field-meta.xml
<CustomField>
    <fullName>ru_StartTaskActual__c</fullName>
    <description>하위 Milestone - Start Task(Actual) 의 Sum</description>
    <label>Start Task(Actual)</label>
    <summarizedField>Milestone__c.ru_StartTaskActual__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>