force-app/main/default/objects/Project__c/fields/ru_StartTaskPlan__c.field-meta.xml
<CustomField>
    <fullName>ru_StartTaskPlan__c</fullName>
    <description>하위 Milestone - Start Task(Plan) 의 Sum</description>
    <label>Start Task(Plan)</label>
    <summarizedField>Milestone__c.ru_StartTaskPlan__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>