force-app/main/default/objects/Project__c/fields/ru_TotalTask__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalTask__c</fullName>
    <description>하위 Milestone - Total Task 의 Sum</description>
    <label>Total Task</label>
    <summarizedField>Milestone__c.ru_TotalTask__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>