force-app/main/default/objects/Project__c/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project1</relationshipName>
    <type>Lookup</type>
</CustomField>