force-app/main/default/objects/Project__c/fields/Weekly_Report_create_every__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Report_create_every__c</fullName>
    <inlineHelpText>PMS 주간보고 생성 요일 지정(매주 지정한 요일 기준 -7일 기간으로 생성됨)</inlineHelpText>
    <label>Weekly Report create every</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>