force-app/main/default/objects/Project__c/validationRules/Actual_End_Date_Validation_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_End_Date_Validation_Check</fullName>
    <active>true</active>
    <description>ActualStart__c &gt; ActualEnd__c</description>
    <errorConditionFormula>ActualStart__c &gt; ActualEnd__c</errorConditionFormula>
    <errorDisplayField>ActualEnd__c</errorDisplayField>
    <errorMessage>Please Check Actual End Date!</errorMessage>
</ValidationRule>