force-app/main/default/objects/Project__c/validationRules/Actual_Start_Date_Input_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Start_Date_Input_Check</fullName>
    <active>true</active>
    <description>(Stage changed &quot;In Progress&quot; || Stage = &quot;In Progress&quot;) &amp;&amp; Actual Start Date = Null</description>
    <errorConditionFormula>( ISCHANGED( Stage__c ) &amp;&amp;
	 Text ( Stage__c ) = &quot;In Progress&quot; &amp;&amp;  
	 ISBLANK( ActualStart__c ) ) 
||
( Text ( Stage__c ) = &quot;In Progress&quot; &amp;&amp;  
	 ISBLANK( ActualStart__c ) )</errorConditionFormula>
    <errorDisplayField>ActualStart__c</errorDisplayField>
    <errorMessage>(Stage = &quot;In Progress&quot;) Please Input Actual Start Date!</errorMessage>
</ValidationRule>