force-app/main/default/objects/Project__c/validationRules/Actual_Start_Date_Validation_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Start_Date_Validation_Check</fullName>
    <active>true</active>
    <description>Actual End Date != Null &amp;&amp; Actual Start Date = Null</description>
    <errorConditionFormula>ISBLANK(ActualStart__c)  &amp;&amp;  NOT(ISBLANK(ActualEnd__c) )</errorConditionFormula>
    <errorDisplayField>ActualStart__c</errorDisplayField>
    <errorMessage>Please Input Actual Start Date!</errorMessage>
</ValidationRule>