force-app/main/default/objects/Project__c/validationRules/Plan_End_Date_Validation_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Plan_End_Date_Validation_Check</fullName>
    <active>true</active>
    <description>PlanStart__c &gt; PlanEnd__c</description>
    <errorConditionFormula>PlanStart__c &gt; PlanEnd__c</errorConditionFormula>
    <errorDisplayField>PlanEnd__c</errorDisplayField>
    <errorMessage>Please Check Plan End Date!</errorMessage>
</ValidationRule>