force-app/main/default/objects/Project__c/validationRules/Project_Manager_Null_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Manager_Null_Check</fullName>
    <active>true</active>
    <description>편집 모드에서 Project Manager 가 Null 인 경우</description>
    <errorConditionFormula>ISNEW() = FALSE  &amp;&amp; ISBLANK(ProjectManager__c)</errorConditionFormula>
    <errorMessage>Project Manager 를 지정하세요.</errorMessage>
</ValidationRule>